# OPAL-TOOL

./: .gitignore  PRESENTATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.kiro/specs/autodataset-platform/: design.md  requirements.md  tasks.md
docker/: Dockerfile.api
helm/: Chart.yaml  values.yaml
kubernetes/: deployment.yaml  pvc.yaml
monitoring/prometheus/: prometheus.yml
src/autodataset/: logging_config.py
src/autodataset/api/: auth.py  main.py
src/autodataset/balancer/: module.py
src/autodataset/cleaner/: module.py
src/autodataset/ingestion/: module.py
src/autodataset/labeling/: module.py
src/autodataset/models/: data.py  metadata.py  schemas.py  specifications.py
src/autodataset/orchestrator/: module.py
src/autodataset/quality/: module.py
src/autodataset/repository/: models.py  module.py
src/autodataset/schema_validator/: validator.py
src/autodataset/source_resolver/: __init__.py  resolver.py
src/autodataset/transformer/: module.py
tests/api/: test_main.py
tests/balancer/: test_module.py
tests/cleaner/: test_module.py
tests/ingestion/: test_module.py
tests/labeling/: test_module.py
tests/models/: test_specifications.py
tests/orchestrator/: test_module.py
tests/quality/: test_module.py
tests/repository/: test_module.py
tests/schema_validator/: test_validator.py
tests/transformer/: test_module.py
v_33d0af61/: data.json
